--- a/cell-darkspots-ontario.ipynb
+++ b/cell-darkspots-ontario.ipynb
@@ -28,23 +28,22 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SELECT \n",
+    "**SELECT** \n",
     "\tGeohashBounds\n",
     "    , Latitude\n",
     "    , Longitude\n",
     "    , Country\n",
     "    , City\n",
-    "    \n",
     "\t, AvgDropsPerMonth\n",
     "    , PercentAffected\n",
     "    \n",
-    "FROM `geotab-public-intelligence.UrbanInfrastructure.CellCoverageDarkSpots`\n",
+    "**FROM** `geotab-public-intelligence.UrbanInfrastructure.CellCoverageDarkSpots`\n",
     "\n",
-    "WHERE Country LIKE 'Canada'\n",
-    "AND State LIKE 'Ontario'"
+    "**WHERE** Country **LIKE** 'Canada'\n",
+    "**AND** State **LIKE** 'Ontario'"
    ]
   },
   {
@@ -109,6 +108,23 @@
     "from pyspark.ml.linalg import Vectors\n",
     "from pyspark.ml.feature import VectorAssembler\n",
     "from pyspark.ml.feature import StringIndexer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Helper for formatting for Spark DataFrames\n",
+    "def showDF(df, limitRows =  5, truncate = True):\n",
+    "    if(truncate):\n",
+    "        pandas.set_option('display.max_colwidth', 50)\n",
+    "    else:\n",
+    "        pandas.set_option('display.max_colwidth', -1)\n",
+    "    pandas.set_option('display.max_rows', limitRows)\n",
+    "    display(df.limit(limitRows).toPandas())\n",
+    "    pandas.reset_option('display.max_rows')"
    ]
   },
   {
